force-app/main/default/objects/Courtesy_Car_Contract__c/Courtesy_Car_Contract__c.object-meta.xml
<CustomObject>
    <description>GD-2328</description>
    <label>Courtesy Car Contract</label>
    <nameField>
        <displayFormat>CCC-{000000}</displayFormat>
        <label>Courtesy Car Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courtesy Car Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>