force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Authorized_Person_Driver_Licence_Number__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Person_Driver_Licence_Number__c</fullName>
    <description>GD-2328</description>
    <label>Authorized Person Driver Licence Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>