force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Authorized_Person_Driver_Licence_Valid__c.field-meta.xml
<CustomField>
    <fullName>Authorized_Person_Driver_Licence_Valid__c</fullName>
    <description>GD-2328</description>
    <label>Authorized Person Driver Licence Valid</label>
    <type>Date</type>
</CustomField>