force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Copy_of_Invocie__c.field-meta.xml
<CustomField>
    <fullName>Copy_of_Invocie__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Copy of Invocie</label>
    <type>Checkbox</type>
</CustomField>