force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Courtesy_Car_Brand__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Car_Brand__c</fullName>
    <defaultValue>&#39;Genesis&#39;</defaultValue>
    <label>Courtesy Car Brand</label>
    <length>255</length>
    <type>Text</type>
</CustomField>