force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Courtesy_Car_Version__c.field-meta.xml
<CustomField>
    <fullName>Courtesy_Car_Version__c</fullName>
    <label>Courtesy Car Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>