force-app/main/default/objects/Courtesy_Car_Contract__c/fields/CustomerSignatureId__c.field-meta.xml
<CustomField>
    <fullName>CustomerSignatureId__c</fullName>
    <label>Pickup CustomerSignatureId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>