force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Date_Time_DELIVERY__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_DELIVERY__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>GD-2328</description>
    <label>Date &amp; Time (DELIVERY)</label>
    <type>DateTime</type>
</CustomField>