force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Date_Time_PICK_UP__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_PICK_UP__c</fullName>
    <description>GD-2328
Timestamp of RecordType change (Delivery -&gt; Pic up)</description>
    <label>Date &amp; Time (PICK UP)</label>
    <type>DateTime</type>
</CustomField>