force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Delivery_CustomerSignatureId__c.field-meta.xml
<CustomField>
    <fullName>Delivery_CustomerSignatureId__c</fullName>
    <label>Delivery CustomerSignatureId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>