force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Delivery_OutsideCheckId__c.field-meta.xml
<CustomField>
    <fullName>Delivery_OutsideCheckId__c</fullName>
    <label>Delivery OutsideCheckId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>