force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>GD-2328</description>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Courtesy Car Contracts</relationshipLabel>
    <relationshipName>Courtesy_Car_Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>