force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Expected_Date_Time_to_PICK_UP__c.field-meta.xml
<CustomField>
    <fullName>Expected_Date_Time_to_PICK_UP__c</fullName>
    <label>Expected Date &amp; Time to PICK UP</label>
    <type>DateTime</type>
</CustomField>