force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Final_Kilometers_odometers__c.field-meta.xml
<CustomField>
    <fullName>Final_Kilometers_odometers__c</fullName>
    <description>GD-2328</description>
    <label>Final Kilometers (odometers)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>