force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Agency_Full_Address__c.field-meta.xml
<CustomField>
    <fullName>fm_Agency_Full_Address__c</fullName>
    <description>GD-2328</description>
    <formula>Department__r.Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Full Address</label>
    <type>Text</type>
</CustomField>