force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>fm_Agency_Name__c</fullName>
    <description>GD-2328</description>
    <formula>Department__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Name</label>
    <type>Text</type>
</CustomField>