force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Authorized_Person_Address__c.field-meta.xml
<CustomField>
    <fullName>fm_Authorized_Person_Address__c</fullName>
    <description>GD-2328</description>
    <formula>IF(NOT(ISBLANK(Repair__r.Requester__r.Contact__r.MailingStreet)),      Repair__r.Requester__r.Contact__r.MailingStreet            + BR(), NULL) +
IF(NOT(ISBLANK(Repair__r.Requester__r.Contact__r.MailingCity)),        Repair__r.Requester__r.Contact__r.MailingCity              + BR(), NULL) +
IF(NOT(ISBLANK(Repair__r.Requester__r.Contact__r.MailingState)),       Repair__r.Requester__r.Contact__r.MailingState,                    NULL) +
IF(NOT(ISBLANK(Repair__r.Requester__r.Contact__r.MailingPostalCode)),  Repair__r.Requester__r.Contact__r.MailingPostalCode + BR(), NULL) +
IF(NOT(ISBLANK(Repair__r.Requester__r.Contact__r.MailingCountry)),     Repair__r.Requester__r.Contact__r.MailingCountry,                  NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Person Address</label>
    <type>Text</type>
</CustomField>