force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Authorized_Person_Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>fm_Authorized_Person_Mobile_Phone_Number__c</fullName>
    <description>GD-2328</description>
    <formula>Repair__r.Requester__r.Contact__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Person Mobile Phone Number</label>
    <type>Text</type>
</CustomField>