force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Authorized_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>fm_Authorized_Person_Name__c</fullName>
    <description>GD-2328</description>
    <formula>Repair__r.fm_RequesterName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Authorized Person Name</label>
    <type>Text</type>
</CustomField>