force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Customer_Car_Licence_Plate__c.field-meta.xml
<CustomField>
    <fullName>fm_Customer_Car_Licence_Plate__c</fullName>
    <description>GD-2328</description>
    <formula>Repair__r.Vehicle__r.Licence_plate_after_registration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Car Licence Plate</label>
    <type>Text</type>
</CustomField>