force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Customer_Car_Model__c.field-meta.xml
<CustomField>
    <fullName>fm_Customer_Car_Model__c</fullName>
    <description>GD-2328</description>
    <formula>Repair__r.Vehicle__r.VehicleType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Car Model</label>
    <type>Text</type>
</CustomField>