force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Delivery_on_Behalf_Signature__c.field-meta.xml
<CustomField>
    <fullName>fm_Delivery_on_Behalf_Signature__c</fullName>
    <formula>IF (
ISBLANK( Delivery_on_Behalf_SignatureId__c ),
IMAGE(&quot;/resource/1550046204000/sign_empty&quot;, &quot;Signature&quot;, 100, 200),
IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; + Delivery_on_Behalf_SignatureId__c + &quot;&amp;operationContext=S1&quot;,
&quot;Signature&quot;,
113,
300
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delivery-Signer Signature on behalf</label>
    <type>Text</type>
</CustomField>