force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_GDPR_Legal__c.field-meta.xml
<CustomField>
    <fullName>fm_GDPR_Legal__c</fullName>
    <formula>Department__r.GDPRLegal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GDPR Legal</label>
    <type>Text</type>
</CustomField>