force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_GPA_Mobile__c.field-meta.xml
<CustomField>
    <fullName>fm_GPA_Mobile__c</fullName>
    <formula>Repair__r.DepartmentVehicle__r.Account.Assigned_GPA__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GPA Mobile</label>
    <type>Text</type>
</CustomField>