force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Legal_basic_disclaimer__c.field-meta.xml
<CustomField>
    <fullName>fm_Legal_basic_disclaimer__c</fullName>
    <formula>Department__r.Legal_texts__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal basic disclaimer</label>
    <type>Text</type>
</CustomField>