force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>fm_Record_Type_Developer_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Developer Name</label>
    <type>Text</type>
</CustomField>