force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Repair_No__c.field-meta.xml
<CustomField>
    <fullName>fm_Repair_No__c</fullName>
    <formula>Repair__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Service Booking No</label>
    <type>Text</type>
</CustomField>