force-app/main/default/objects/Courtesy_Car_Contract__c/fields/fm_Signature__c.field-meta.xml
<CustomField>
    <fullName>fm_Signature__c</fullName>
    <formula>IF (
ISBLANK(SignatureId__c),
IMAGE(&quot;/resource/1550046204000/sign_empty&quot;, &quot;Signature&quot;, 100, 200),
IMAGE(&quot;/servlet/servlet.FileDownload?file=&quot; + SignatureId__c + &quot;&amp;operationContext=S1&quot;,
&quot;Signature&quot;,
113,
300
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pickup - DriverSignature</label>
    <type>Text</type>
</CustomField>