force-app/main/default/objects/Courtesy_Car_Contract__c/fields/GDPR_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>GDPR_Acceptance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GDPR Acceptance</label>
    <type>Checkbox</type>
</CustomField>