force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Initial_Kilometers_odometer__c.field-meta.xml
<CustomField>
    <fullName>Initial_Kilometers_odometer__c</fullName>
    <description>GD-2328</description>
    <label>Initial Kilometers (odometer)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>