force-app/main/default/objects/Courtesy_Car_Contract__c/fields/OutsideCheckId__c.field-meta.xml
<CustomField>
    <fullName>OutsideCheckId__c</fullName>
    <label>Pick up OutsideCheckId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>