force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Pickup_Exterior_Inspected__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Exterior_Inspected__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pickup - Exterior Inspected</label>
    <type>Checkbox</type>
</CustomField>