force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Pickup_Signer_onbehalf__c.field-meta.xml
<CustomField>
    <fullName>Pickup_Signer_onbehalf__c</fullName>
    <label>Pickup - Signer Name on behalf</label>
    <length>255</length>
    <type>Text</type>
</CustomField>