force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Price_by_Day__c.field-meta.xml
<CustomField>
    <fullName>Price_by_Day__c</fullName>
    <description>GD-2328</description>
    <label>Price by Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>