force-app/main/default/objects/Courtesy_Car_Contract__c/fields/Repair__c.field-meta.xml
<CustomField>
    <fullName>Repair__c</fullName>
    <description>GD-2328</description>
    <label>Service Booking</label>
    <referenceTo>Repair__c</referenceTo>
    <relationshipLabel>Courtesy Car Contracts</relationshipLabel>
    <relationshipName>Courtesy_Car_Contracts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>