force-app/main/default/objects/Courtesy_Car_Contract__c/fields/SignatureId__c.field-meta.xml
<CustomField>
    <fullName>SignatureId__c</fullName>
    <label>Pickup DriverSignatureId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>