force-app/main/default/objects/Courtesy_Car_Contract__c/recordTypes/ReadOnly.recordType-meta.xml
<RecordType>
    <fullName>ReadOnly</fullName>
    <active>true</active>
    <label>ReadOnly</label>
</RecordType>